--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start":"node app.js",
     "app":"nodemon app.js",
     "client":"npm start --prefix ./client",
-    "dev":"concurrently \"npm starts\"\"npm run client\""
+    "dev":"concurrently \"npm start\"\"npm run client\""
 
   },
   "author": "",
